[package]
name = "openssl_to_rfc"
description = "Convert OpenSSL cipher suite names into RFC names"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ayrx/openssl_to_rfc"
version = "0.4.0"
authors = ["Terry Chia <terry@ayrx.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.22.0"
strum_macros = "0.22.0"

[dev-dependencies]
openssl = { version = "0.10.37", features = ["vendored"] }
